fix: normalize shutdown thread creation